--- a/pro12 (jsp 스크립트 요소 기능)/WebContent/WEB-INF/web.xml
+++ b/pro12 (jsp 스크립트 요소 기능)/WebContent/WEB-INF/web.xml
@@ -1,1 +1,27 @@
-
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+  <display-name>pro12</display-name>
+  <welcome-file-list>
+	<welcome-file>/test02/main.jsp</welcome-file>
+	<welcome-file>/test02/add.jsp</welcome-file>
+	<welcome-file>/test02/add.html</welcome-file>
+  </welcome-file-list>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/err/error_404.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/err/error_500.jsp</location>
+	</error-page>
+	
+	<description>MySQL</description>
+		<resource-ref>
+			<description>MySQL DB Connection</description>
+			<res-ref-name>jdbc/pro07</res-ref-name>
+			<res-type>javax.sql.DataSource</res-type>
+			<res-auth>Container</res-auth>
+		</resource-ref>
+</web-app>
