--- a/pro26 (스프링 애너테이션 기능)/WebContent/WEB-INF/config/jdbc.properties
+++ b/pro26 (스프링 애너테이션 기능)/WebContent/WEB-INF/config/jdbc.properties
@@ -1,1 +1,4 @@
-
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/pro07
+jdbc.username=root
+jdbc.password=rlaalsrud11@
