--- a/pro27 (메이븐과 스프링 STS)/Java Resources/src/main/webapp/config/jdbc/jdbc.properties
+++ b/pro27 (메이븐과 스프링 STS)/Java Resources/src/main/webapp/config/jdbc/jdbc.properties
@@ -1,1 +1,4 @@
-
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/pro07
+jdbc.username=root
+jdbc.password=rlaalsrud11@
